Archive2/91/ff55a75b079175/output
main.cpp:5:1: error: static_assert failed ""
static_assert(std::is_same<int64_t, decltype(42ll)>::value, "");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
